# doomgeneric-em

./: .gitignore  CMakeLists.txt  README.md  bin_to_c.c
doomgeneric/: .clang-format  am_map.c  am_map.h  config.h  d_englsh.h  d_event.c  d_event.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_main.c  d_mode.c  d_mode.h  d_net.c  deh_main.h  deh_misc.h  deh_str.h  doomdata.h  doomdef.h  doomfeatures.h  doomgeneric.c  doomgeneric.h  doomgeneric_bare.c  doomgeneric_iwad.c  doomgeneric_sdl.c  doomgeneric_syscall.c  doomgeneric_syscall.h  doomstat.h  doomtype.h  dstrings.c  dummy.c  f_finale.c  f_wipe.c  f_wipe.h  g_game.c  g_game.h  gusconf.c  hu_lib.c  (+87 more)
